--- a/index.html
+++ b/index.html
@@ -253,6 +253,8 @@
 <li><a href="http://www.qingsp.info/" target="_blank">青视频</a></li>
 <li><a href="http://www.seqren.info/" target="_blank">色情人视频</a></li>
 <li><a href="http://www.51mmm.info/" target="_blank">51妹妹在线</a></li>
+<li><a href="http://www.slzxtv.com/" target="_blank">色郎在线</a></li>
+<li><a href="http://www.yslav.com/" target="_blank">夜色撸</a></li>
 <li><a href="http://www.chushui69.com/" target="_blank">初水视频</a></li>
 <li><a href="http://www.apian40.com/" target="_blank">A片迷</a></li>
 <li><a href="http://cb106.com/" target="_blank">青草视频</a></li>
@@ -292,6 +294,7 @@
 <li><a href="http://huojianp1.pw/" target="_blank">火箭视频</a></li>
 <li><a href="http://www.sesexia.com/" target="_blank">超快色色下</a></li>
 <li><a href="http://www.taoluyingyuan.com/" target="_blank">套路影院</a></li>
+<li><a href="http://www.99zzf.com/" target="_blank">大香蕉网</a></li>
 <li><a href="http://www.ppp166.com/" target="_blank">伦理片大全</a></li>
 <li><a href="http://www.wpzy7.com/" target="_blank">超碰</a></li>
 <li><a href="http://9388av.com/" target="_blank">撸你妹吖</a></li>
@@ -303,6 +306,8 @@
 <li><a href="http://www.52x.club/" target="_blank">我爱插</a></li>
 <li><a href="http://www.91lu.club/" target="_blank">就要撸</a></li>
 <li><a href="http://www.langnizi.com/" target="_blank">浪妮子视频</a></li>
+<li><a href="http://meisezx.com/" target="_blank">魅色在线</a></li>
+<li><a href="http://www.fhmmav.com/" target="_blank">粉红妹妹</a></li>
 <li><a href="http://www.7u8e.com/" target="_blank">7菇8姨</a></li>
 <li><a href="http://www.lxx01.co/" target="_blank">撸穴穴</a></li>
 <li><a href="http://www.avzhao.cc/" target="_blank">找AV上</a></li>
@@ -368,8 +373,6 @@
 <li><a href="http://cat3movie.us/" target="_blank">海外三极</a></li>
 <li><a href="http://www.tuxse.com/" target="_blank">超碰在线</a></li>
 <li><a href="https://www.189df.com/" target="_blank">东方AV在线</a></li>
-<li><a href="http://meisezx.com/" target="_blank">魅色在线</a></li>
-<li><a href="http://www.fhmmav.com/" target="_blank">粉红妹妹</a></li>
 <li><a href="http://zhs.lxxlx.com/" target="_blank">LXXLX</a></li>
 <li><a href="http://www.vid999.com/" target="_blank">vid999</a></li>
 <li><a href="http://huaidushi.info/" target="_blank">坏都市</a></li>
