--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
 <li><a href="http://papa60.com/?fromuid=8" target="_blank">啪啪社区</a></li>
 <li><a href="http://fl47.co/?fromuid=5495" target="_blank">福利社区</a></li>
 <li><a href="http://lovecityclub.com/bt/?u=701541" target="_blank">爱城</a></li>
-<li><a href="http://x77827.net/bbs/" target="_blank">Xiao77</a></li>
+<li><a href="http://x77827.com/bbs/" target="_blank">Xiao77</a></li>
 <li><a href="http://174.127.195.198/bbs/index.php" target="_blank">色中色</a></li>
 <li><a href="http://104.194.212.12/forum/?fromuid=11991220" target="_blank">第一会所</a></li>
-<li><a href="http://se8girl.com/?fromuid=1096417" target="_blank">性吧春暖花开</a></li>
+<li><a href="http://girl1280.com/?fromuid=1096417" target="_blank">性吧春暖花开</a></li>
 <li><a href="http://www.gaohaolu.com/" target="_blank">高好撸</a></li>
 <li><a href="http://lu6vip.com/" target="_blank">撸6VIP论坛</a></li>
 <li><a href="http://www.henhenlu999.xyz/" target="_blank">狠狠撸第二站</a></li>
@@ -149,7 +149,7 @@
 <li><a href="http://taohuabbs.net/?fromuid=70941" target="_blank">桃花族</a></li>
 <li><a href="http://cl.8qb.xyz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区2</a></li>
 <li><a href="http://cl.5ug.pw/index.php?u=296710&ext=96e5d" target="_blank">草榴社区3</a></li>
-<li><a href="http://dz.zk0.info/index.php?u=296710&ext=96e5d" target="_blank">草榴社区4</a></li>
+<li><a href="http://dz.u6y.pw/index.php?u=296710&ext=96e5d" target="_blank">草榴社区4</a></li>
 <li><a href="http://cl.wa3.co/index.php?u=296710&ext=96e5d" target="_blank">草榴社区5</a></li>
 <li><a href="http://cl.eg3.bid/index.php?u=296710&ext=96e5d" target="_blank">草榴社区6</a></li>
 <li><a href="http://cl.yf6.win/index.php?u=296710&ext=96e5d" target="_blank">草榴社区7</a></li>
@@ -254,7 +254,7 @@
 <li><a href="http://www.94lua.com/" target="_blank">94撸啊</a></li>
 <li><a href="http://www.jjavs.xyz/" target="_blank">鸡鸡在线</a></li>
 <li><a href="http://chushui99.com/" target="_blank">初水视频</a></li>
-<li><a href="http://www.apian40.com/" target="_blank">A片迷</a></li>
+<li><a href="http://apianmi.com/" target="_blank">A片迷</a></li>
 <li><a href="http://www.zhaoav.xyz/" target="_blank">青青草</a></li>
 <li><a href="http://www.yeyeluav.info/" target="_blank">夜夜撸视频</a></li>
 <li><a href="http://yingtaopa.com/" target="_blank">樱桃视频</a></li>
@@ -331,7 +331,6 @@
 <li><a href="http://www.aisegeav.com/" target="_blank">爱色阁</a></li>
 <li><a href="http://caol66.com/" target="_blank">草榴视频</a></li>
 <li><a href="http://91888.ga/" target="_blank">A福利视频</a></li>
-<li><a href="http://www.avlezi.com/" target="_blank">AV乐子</a></li>
 <li><a href="http://www.yudongxian.com/" target="_blank">玉洞仙</a></li>
 <li><a href="http://www.wojiuyaolu.com/" target="_blank">撸撸奶</a></li>
 <li><a href="http://www.mowang.info/" target="_blank">魔王在线</a></li>
@@ -384,7 +383,7 @@
 <li><a href="http://fcw3.com/" target="_blank">废柴视频网</a></li>
 <li><a href="http://www.youppp.com/" target="_blank">有B吗？</a></li>
 <li><a href="http://www.777vid.com/" target="_blank">PLAY 视频</a></li>
-<li><a href="http://www.13jiuseteng.com/" target="_blank">九涩腾</a></li>
+<li><a href="http://www.jiuseteng23.com/" target="_blank">九涩腾</a></li>
 <li><a href="http://www.kk-av.com/" target="_blank">在线手机视频</a></li>
 <li><a href="https://avhd101.com/" target="_blank">AVHD101</a></li>
 <li><a href="http://www.uukk8822.com/" target="_blank">宅男频道</a></li>
@@ -489,7 +488,7 @@
 <li><a href="http://www.u15loli.com/?fromuid=13188" target="_blank">U15萝莉小店</a></li>
 <li><a href="https://u15.info/" target="_blank">U-15天堂</a></li>
 <li><a href="http://www.wumeisz.net/?fromuid=9546" target="_blank">妩媚山庄</a></li>
-<li><a href="http://nztdsm6.com/?fromuid=411498" target="_blank">女主天地</a></li>
+<li><a href="http://nztdsm7.com/?fromuid=411498" target="_blank">女主天地</a></li>
 <li><a href="http://www.milfsalute.com/" target="_blank">熟女图片</a></li>
 <li><a href="http://www.bigbreastarchive.com/" target="_blank">大奶图片</a></li>
 <li><a href="http://www.foxhq.com/" target="_blank">爆乳丰臀画廊</a></li>
@@ -503,12 +502,10 @@
 <li><a href="https://lxty66.com/" target="_blank">莲秀图院</a></li>
 <li><a href="http://huaban.com/boards/16607428/" target="_blank">爱莲说</a></li>
 <li><a href="http://voyeurhit.com/" target="_blank">偷拍视频</a></li>
-<li><a href="http://africanlesbians.com/" target="_blank">黑人女同视频</a></li>
 <li><a href="http://www.oklesbians.com/" target="_blank">OK LesBians</a></li>
 <li><a href="http://www.thelesbianporn.com/" target="_blank">Lesbian Porn</a></li>
 <li><a href="http://www.ladyboyweb.com/" target="_blank">Ladyboyweb</a></li>
 <li><a href="http://www.trannytube.name/" target="_blank">Tranny Tube</a></li>
-<li><a href="http://www.slavestube.com/" target="_blank">Slaves Tube</a></li>
 <li><a href="http://bdsmland.org/" target="_blank">Bdsmland</a></li>
 <li><a href="http://japanbdsm.com/" target="_blank">Japan BDSM</a></li>
 				    </ul>
@@ -575,7 +572,6 @@
 <li><a href="http://www.win981.com/?fromuid=776852" target="_blank">蝴蝶俱乐部</a></li>
 <li><a href="http://www.xy69.info/?fromuid=678142" target="_blank">逍遥游</a></li>
 <li><a href="http://www.cqhx.info/?fromuid=51281" target="_blank">全城嘿咻</a></li>
-<li><a href="http://www.xyj2014.com/?fromuid=118049" target="_blank">西友记</a></li>
 <li><a href="http://192.161.172.132/?u=465979" target="_blank">买春堂</a></li>
 <li><a href="http://www.myhhg.com/?u=430488" target="_blank">红河谷</a></li>
 <li><a href="http://www.2ta.tv/" target="_blank">恋恋影视</a></li>
